# cli

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: platform-config.example.json  platform-config.schema.json
src/a3ip/: __init__.py  __main__.py  bundle.py  cli.py  new.py  new_version_cmd.py  platform_config.py  scaffold_cmd.py  sync_cmd.py  validate.py  zip_cmd.py
