[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a3ip"
version = "1.5.3"
description = "CLI for A3IP - AI Infrastructure Installation Package (pronounced 'ay-trip')"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Maksym Prydorozhko", email = "maksym.prydorozhko@gmail.com" }]
requires-python = ">=3.9"
keywords = ["a3ip", "ai", "agent", "workflow", "package", "installer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://a3ip.dev"
Repository = "https://github.com/a3ip-standard/cli"
"Bug Tracker" = "https://github.com/a3ip-standard/cli/issues"
Specification = "https://github.com/a3ip-standard/spec"

[project.scripts]
a3ip = "a3ip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
